Added subscription logic